# FEUP-ROBO-Assignment-2

./: README.md
src/assignment_2/: CMakeLists.txt  line_following.cpp  line_following.h  main.cpp  package.xml
stdr_resources/launchers/: v_map_going_left.launch  v_map_going_right.launch  w_map_going_left.launch  w_map_going_right.launch
stdr_resources/robot/: robot.yaml
